--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <link rel="manifest" href="/site.webmanifest" />
     
     <!-- Başlık -->
-    <title>Mehmet Akkan | Web Geliştirici - Yakında</title>
+    <title>Mehmet Akkan | Yakında</title>
     
     <!-- Fontlar -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
